# lejepa

./: README.md  pyproject.toml
lejepa/: geospatial.py
lejepa/univariate/: epps_pulley.py
scripts/: solar_predict_single.py  solar_prediction.py  solar_prediction_25.py
