[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lejepa"
version = "0.0.1"
dependencies = ["torch", "numpy", "loguru", "pytest"]
requires-python = ">=3.8"
authors = [
  {name = "Randall Balestriero", email = "randallbalestriero@gmail.com"},
]
maintainers = [
  {name = "Randall Balestriero", email = "randallbalestriero@gmail.com"}
]
description = "ToDo"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
lejepa = { path = ".", editable = true }
torch = { version = "==2.10.0", index = "https://download.pytorch.org/whl/cu130" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cu130" }

timm = ">=1.0.24,<2"
datasets = ">=4.5.0,<5"

[tool.pixi.tasks]

[tool.pixi.dependencies]
cuda-version = "==13.0"
hydra-core = ">=1.3.2,<2"
mlflow = ">=3.9.0,<4"
polars = ">=1.38.1,<2"
zarr = ">=3.1.5,<4"
numcodecs = ">=0.16.5,<0.17"
dask = ">=2026.1.2,<2027"
xarray = ">=2026.2.0,<2027"
pandas = ">=2.3.3,<3"
numpy = ">=2.4.2,<3"
fsspec = ">=2025.10.0,<2026"
pyproj = ">=3.7.2,<4"
pyresample = ">=1.35.0,<2"
einops = ">=0.8.2,<0.9"
